@@ -6,6 +6,8 @@
 ./src/plugins/ovirt-host-deploy/core/offlinepackager.py
 ./src/plugins/ovirt-host-deploy/gluster/__init__.py
 ./src/plugins/ovirt-host-deploy/gluster/packages.py
+./src/plugins/ovirt-host-deploy/kdump/__init__.py
+./src/plugins/ovirt-host-deploy/kdump/packages.py
 ./src/plugins/ovirt-host-deploy/node/detect.py
 ./src/plugins/ovirt-host-deploy/node/__init__.py
 ./src/plugins/ovirt-host-deploy/node/persist.py
