@@ -2,6 +2,7 @@ ovirt-host-deploy -- oVirt host deploy
 
 ????-??-?? - Version 1.3.0
 
+ * kdump: initial support. rhbz#1079821.
 
 2014-05-02 - Version 1.2.1
 
